--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul>
             </div>
     </header>
-        <div class="hero"></div>
+        <img class="hero"></img>
         <div class="content">
             <div class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="this is a picture of a desk with a notebook showing ways to build SEO" />
