--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
         <img class="hero"></img>
         <main class="content">
-            <section class="search-engine-optimization">
+            <section id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="this is an image of a desktop with a notebook displaying SEO options." />
                 <h2>Search Engine Optimization</h2>
                 <p>
