--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon: A professional company that focuses on SEO, Online Reputation Management, and Social Media Marketing to help your company's overall growth and success.</title>
 </head>
 
 <body>
